Built some tests for BuyerService.java in BuyerServiceTest.java. Replaced abstract implementations of converters in all classes with concrete classed with implemented convert methods.